[package]
name = "blog_os"
version = "0.1.0"
authors = ["Arthur Zakirov <z-arthur@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.8.0"
spin = "0.5.1"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.0.1"
features = ["spin_no_std"]
