[package]
name = "blog_os"
version = "0.1.0"
authors = ["Arthur Zakirov <z-arthur@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bootimage]
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
	"-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.8.0"
spin = "0.5.1"
volatile = "0.2.6"
x86_64 = "0.7.0"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0.1"
features = ["spin_no_std"]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
